k8s/germany.yml
apiVersion: v1
kind: Service
metadata:
  name: svc-tls-dx-360-germany-dev
  namespace: default
spec:
  type: LoadBalancer
  ports:
  - port: 443
  selector:
    app: dx-360-germany-dev
