k8s/manifestgermany.yml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: dx-360-germany-dev
  namespace: default
spec:
  replicas: 1
  selector:
    matchLabels:
      app: dx-360-germany-dev
  strategy:
    rollingUpdate:
      maxSurge: 1
      maxUnavailable: 1
  minReadySeconds: 5 
  template:
    metadata:
      labels:
        app: dx-360-germany-dev
    spec:
      nodeSelector:
        "beta.kubernetes.io/os": linux
      containers:
      - name: dx-360-germany-dev
        image: crkmdevwesteurope.azurecr.io/dx-360-germany-dev-1:v1
        command: ["bash","-c","cd /var/www/html/ && apache2-foreground"]
        ports:
        - containerPort: 80
        resources:
          requests:
            cpu: "1"
          limits:
            cpu: "2"
---
apiVersion: v1
kind: Service
metadata:
  name: svc-dx-360-germany-dev
  namespace: default
spec:
  type: ClusterIP
  ports:
  - port: 80
  selector:
    app: dx-360-germany-dev
