k8s/service.yml
apiVersion: v1
kind: Service
metadata:
  name: dx-360-germany-dev
  namespace: default
  annotations:
    service.beta.kubernetes.io/azure-load-balancer-internal: "true"
spec:
  type: LoadBalancer
  ports:
  - port: 80
  selector:
    app: dx-360-germany-dev
